[tool.poetry]
name = "aiohttp_admin2"
version = "0.0.1"
description = "Generator an admin interface based on aiohttp."
authors = ["Mykhailo Havelia <misha.gavela@gmail.com>"]
maintainers = ["Mykhailo Havelia <misha.gavela@gmail.com>"]
license = "MIT"
readme = 'README_BUILD.rst'
homepage = "https://github.com/arfey/aiohttp_admin2"
repository = "https://github.com/arfey/aiohttp_admin2"
documentation = "https://aiohttp-admin2.readthedocs.io"
keywords = ["aiohttp_admin2", "admin interface", "aiohttp"]
packages = [
    { include = "aiohttp_admin2" },
    { include = "aiohttp_admin2/**/*" },
]
exclude = ["tests/**/*"]

[tool.poetry.dependencies]
python = "^3.8.1"
aiohttp = "^3.6.3"
aiohttp-jinja2 = "^1.4.2"

umongo = {version = "^3.1.0", extras = ["motor"], optional = true}
python-dateutil = "^2.8.1"
sqlalchemy = "^2.0.29"
sqlalchemy-stubs = "^0.4"
aiopg = {version = "^1.4.0", extras = ["sa"]}
aiomysql = {version = "^0.2.0", optional = true}

[tool.poetry.group.dev.dependencies]
aiohttp-devtools = "^1.1.2"
aiohttp-security = "^0.5.0"
aiohttp-session = "^2.12.0"
aiohttp-jinja2 = "^1.6"
cryptography = "^42.0.5"
aiofiles = "^23.2.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-docker = "^3.1.1"
pytest-aiohttp = "^1.0.5"
pytest-asyncio = "0.21.1"
bandit = "^1.7.8"
flake8 = "^7.0.0"
twine = "^5.0.0"

[tool.poetry.extras]
motor = ["umongo"]
mysql = ["aiomysql"]


[tool.poetry-dynamic-versioning]
enable = true

[tool.pytest.ini_options]
asyncio_mode="auto"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
